<resources>
    <string name="app_name">A Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_flash_mob">DetailFlashMob</string>
    <string name="no_permission">No permission</string>
    <string name="permission">Permessi garantiti</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="welcome">WELCOME</string>
    <string name="intro_slide1_description">Progetto di esame</string>
    <string name="permissions">Permessi</string>
    <string name="intro_slide2_permissions">L\'app per funzionare al meglio ha bisogno di alcuni permessi, li puoi concedere ora o più in là quando ti verranno richiesti</string>
    <string name="skip">skip</string>
    <string name="upload_error">Questa funzione è solo per utenti autenticati</string>
    <string name="now">now</string>
    <string name="soon">in 15 minutes</string>
    <string name="alarm_set">Allarme impostato</string>
    <string name="already_exist">Hai già scaricato quest\'immagine</string>
    <string name="sd_unmount">Memoria esterna non trovata</string>
    <string name="download_error">Impossibile scaricare l\'immagine</string>
    <string name="download_complete">Download completato</string>
    <string name="click_to_open">Premi per visualizzare la foto</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Suono notifica</string>
    <string name="pref_ringtone_silent">Silenzioso</string>
    <string name="pref_title_vibrate">Vibrazione</string>
    <string name="settings">Impostazioni</string>
    <string name="battery_save">Risparmio energetico</string>
    <string name="notification">Notifiche</string>
    <string name="notifications_download">Notifiche per i Download</string>
    <string name="login">Login</string>
    <string name="pref_header_general">General</string>
    <string name="login_ok">login effettuato con successo</string>
    <string name="login_nope">user name o password errato</string>
    <string name="about">About</string>
    <string name="github">Fork me on Github</string>
    <string name="lib">Librerie Open Source</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>
    <string name="notifications_flashmob">Notifiche per i Flashmob</string>
    <string name="future_event_msg">Questo evento inizierà il</string>
    <string name="pass_event_msg">Questo evento è concluso</string>
</resources>
