<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory android:title="@string/settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="battery_save"
            android:title="@string/battery_save" />

        <Preference android:title="@string/login">
            <intent android:action="it.unisannio.cp.orange.aclient.LOGIN"/>
        </Preference>

        <Preference android:title="@string/logout"
            android:key="pref_logout"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications_flashmob">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_flashmob"
            android:title="@string/notification" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_flashmob"
            android:key="notifications_flashmob_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_flashmob"
            android:key="notifications_flashmob_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications_download">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_downloads"
            android:title="@string/notification" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_downloads"
            android:key="notifications_downloads_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_downloads"
            android:key="notifications_downloads_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference android:title="@string/github">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/OrangeDugongo/UNI-CP__18.01__AClient"/>
        </Preference>

        <Preference android:title="@string/lib">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/OrangeDugongo/UNI-CP__18.01__AClient/wiki/Licence-Open-Sources"/>
        </Preference>

        <Preference android:title="@string/version"
            android:summary="0.1"/>
    </PreferenceCategory>

</PreferenceScreen>
